# aiso_server_client_example

./: CMakeLists.txt  README.md
App/: CMakeLists.txt
App/include/: server.h  starter_example.h
App/src/: main.cpp  server.cpp  starter_example.cpp
Client/: CMakeLists.txt
Client/include/: client.h
Client/src/: client.cpp  main.cpp
ClientTLS/: CMakeLists.txt
ClientTLS/include/: TLSClient.h
ClientTLS/src/: TLSClient.cpp  main.cpp
IfRuntime/: CMakeLists.txt
IfRuntime/src/: IfRuntime.cpp
NetworkIf/: CMakeLists.txt
NetworkIf/TCP/: CMakeLists.txt
NetworkIf/TCP/include/: TCPAdapter.h
NetworkIf/TCP/src/: TCPAdapter.cpp
NetworkIf/TCPSERVER/: CMakeLists.txt
NetworkIf/TCPSERVER/include/: TCPServerAdapter.h
NetworkIf/TCPSERVER/src/: TCPServerAdapter.cpp
NetworkIf/TLS/: CMakeLists.txt
NetworkIf/TLS/include/: TLSAdapter.h
NetworkIf/TLS/src/: TLSAdapter.cpp
NetworkIf/TLSSERVER/: CMakeLists.txt
NetworkIf/TLSSERVER/include/: TLSServerAdapter.h
NetworkIf/TLSSERVER/src/: TLSServerAdapter.cpp
NetworkIf/UDP/: CMakeLists.txt
NetworkIf/UDP/src/: EVCCUDPClient.cpp
PlatformInterface/: CMakeLists.txt
PlatformInterface/src/: PAInterface.cpp
Service/: CMakeLists.txt
Service/include/: demo.h
Service/src/: demo.cpp  main.cpp
ServiceTLS/: CMakeLists.txt
ServiceTLS/api/: api.proto
ServiceTLS/include/: TLSServer.h
ServiceTLS/src/: TLSServer.cpp  main.cpp
lib/: CMakeLists.txt
modules/: CMakeLists.txt  asio.cmake  cppcommon.cmake  fmt.cmake  openv2g.cmake
modules/asio/asio/src/: Makefile.am
(+9 files in other folders)
